syntax = "proto3";

option csharp_namespace = "GrcpOyasumiCore";

package OyasumiCore;

service OyasumiCore {
  rpc OnOverlaySidecarStart (OverlaySidecarStartArgs) returns (Empty) {}
  rpc OnElevatedSidecarStart (ElevatedSidecarStartArgs) returns (Empty) {}
}

message OverlaySidecarStartArgs {
  uint32 pid = 1;
  uint32 grpc_port = 2;
  uint32 grpc_web_port = 3;
}

message ElevatedSidecarStartArgs {
  uint32 pid = 1;
  uint32 grpc_port = 2;
  uint32 grpc_web_port = 3;
  // Set to the pid of the previous process in case the sidecar relaunched itself
  optional uint32 old_pid = 4;
}

message Empty {}
